[package]
name = "visualpanic-rs"
description = "A library providing a panic hook for Rust applications that visualizes the panic with a native error dialog on supported systems"
repository = "https://github.com/philippremy/visualpanic-rs"
readme = "README.md"
version = "0.1.0"
edition = "2021"
categories = ["development-tools", "gui", "development-tools::debugging"]
keywords = ["panic", "visualpanic", "gui", "debugging", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.7.0"
serde = { version = "1.0.193", features = ["derive"]}